zebra-rpc/src/methods/tests/snapshots/get_block_template_basic@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 879
expression: block_template
---
{
  "capabilities": [
    "proposal"
  ],
  "version": 4,
  "previousblockhash": "0000000000d723156d9b65ffcf4984da7a19675ed7e2f06d9e5d5188af087bf8",
  "blockcommitmentshash": "5caa9e677290a9847e8ab553a2140b78079cef67e5e3e6ab9a47aa3e91fb1bb3",
  "lightclientroothash": "5caa9e677290a9847e8ab553a2140b78079cef67e5e3e6ab9a47aa3e91fb1bb3",
  "finalsaplingroothash": "5caa9e677290a9847e8ab553a2140b78079cef67e5e3e6ab9a47aa3e91fb1bb3",
  "defaultroots": {
    "merkleroot": "0dd4c87d6aba52431fef01079578826b547a22e444af986368c507918f893e8a",
    "chainhistoryroot": "94470fa66ebd1a5fdb109a5aa3f3204f14de3a42135e71aa7f4c44055847e0b5",
    "authdataroot": "cd6e65a083f87507d9b074b2c2443f6135d5809f61820385a1e1cacc5bad8f14",
    "blockcommitmentshash": "5caa9e677290a9847e8ab553a2140b78079cef67e5e3e6ab9a47aa3e91fb1bb3"
  },
  "transactions": [],
  "coinbasetxn": {
    "data": "050000800a27a726b4d0d6c20000000041be1900010000000000000000000000000000000000000000000000000000000000000000ffffffff0e0341be1909f09f90ba20576f6c66ffffffff0480b2e60e0000000017a9147e7e7e7e7e7e7e7e7e7e7e7e7e7e7e7e7e7e7e7e87286bee000000000017a914d45cb1adffb5215a42720532a076f02c7c778c908738c94d010000000017a91469a9f95a98fe581b6eb52841ef4806dc4402eb908740787d010000000017a914931fec54c1fea86e574462cc32013f5400b8912987000000",
    "hash": "0dd4c87d6aba52431fef01079578826b547a22e444af986368c507918f893e8a",
    "authdigest": "cd6e65a083f87507d9b074b2c2443f6135d5809f61820385a1e1cacc5bad8f14",
    "depends": [],
    "fee": 0,
    "sigops": 0,
    "required": true
  },
  "longpollid": "00016871043eab7f731654008728000000000000000000",
  "target": "0005555400000000000000000000000000000000000000000000000000000000",
  "mintime": 1654008606,
  "mutable": [
    "time",
    "transactions",
    "prevblock"
  ],
  "noncerange": "00000000ffffffff",
  "sigoplimit": 20000,
  "sizelimit": 2000000,
  "curtime": 1654008617,
  "bits": "1f055554",
  "height": 1687105,
  "maxtime": 1654008728
}
